[package]
name = "rust-2048"
version = "0.1.0"
authors = ["n7olkachev <n7olkachev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.67"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }

[lib]
crate-type = ["cdylib", "rlib"]
